# aws-de-rs

./: .gitignore  README.md  intro-data-engineering.md
aws-data-lakes/: README.md
das-c01-data-analytics/: README.md
data-sources/: Cargo.toml  config.example.yaml
data-sources/src/: main.rs  model.rs  mongo.rs
databricks-lakehouse/: README.md
de-pipelines/spark_pipelines/: __init__.py
de-pipelines/spark_pipelines/.circleci/: config.yml
de-pipelines/spark_pipelines/pydiaper/test/: spark_helpers.py  test_spark_helpers.py
dva-c02/: README.md  practice_test_1.md
hands-on/data-engineer/: README.md  avg_ratings.csv  install_airflow.sh  movies_etl.py  requirements.txt
hands-on/data-engineer/airflow/: airflow.cfg  airflow.db
hands-on/pythonProject/: README.md  daily_passengers.py  dice_simulator.py  mad_libs.py  number_guessing.py
ssa-c03/: README.md
